tests/baselines/reference/negatedInMappedTypeDisablesExcessProperties.errors.txt
tests/cases/conformance/types/negated/negatedInMappedTypeDisablesExcessProperties.ts(16,5): error TS2322: Type '{ foo: number; bar: number; other: string; }' is not assignable to type 'Config'.
  Object literal may only specify known properties, and 'other' does not exist in type 'Config'.
tests/cases/conformance/types/negated/negatedInMappedTypeDisablesExcessProperties.ts(22,5): error TS2322: Type '{ foo: number; bar: number; other: number; }' is not assignable to type 'Config'.
  Object literal may only specify known properties, and 'other' does not exist in type 'Config'.


==== tests/cases/conformance/types/negated/negatedInMappedTypeDisablesExcessProperties.ts (2 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/4196
    // needs https://github.com/Microsoft/TypeScript/pull/26797 to work, as even though the mapped type can be
    // written, the key type `string & ~("foo" | "bar")` can't be represented as properties or string/number index
    // signatures
    
    type Config = {
        foo: number;
        bar: number;
    } & {
        [k in (string & not ("foo" | "bar"))]: string;
    };
    
    const conf: Config = {
        foo: 12,
        bar: 12,
        other: "string"
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ foo: number; bar: number; other: string; }' is not assignable to type 'Config'.
!!! error TS2322:   Object literal may only specify known properties, and 'other' does not exist in type 'Config'.
    }; // OK
    
    const conf2: Config = {
        foo: 12,
        bar: 12,
        other: 0,
        ~~~~~~~~
!!! error TS2322: Type '{ foo: number; bar: number; other: number; }' is not assignable to type 'Config'.
!!! error TS2322:   Object literal may only specify known properties, and 'other' does not exist in type 'Config'.
    }; // Should error
    
    